[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
juniper = "0.15.11"
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.103"
